--- a/Client/ATM-FE/src/assets/index.css
+++ b/Client/ATM-FE/src/assets/index.css
@@ -10,6 +10,18 @@
     --color-pri: #00246B;
     --color-sec: #CADCFC;
     --color-sw: #F8F9FA;
+    --color-txt: #000000;
+    --color-sha: #A0A0A0;
+    --color-bgu: #00246B;
+}
+
+.theme-dark {
+    --color-pri: #F8C61E;
+    --color-sec: #FFF7C2;
+    --color-sw:#1B1B1B;
+    --color-txt: #FFFFFF;
+    --color-sha: #00000033;
+    --color-bgu: #212121a9;
 }
 
 .Whitecontainer {
@@ -20,6 +32,16 @@
     background-image: radial-gradient(rgba(12, 12, 12, 0.171) 2px, transparent 0);
     background-size: 30px 30px;
     background-position: -5px -5px;
+}
+
+.Blackcontainer {
+    width: 100%;
+    height: 100%;
+    /* Add your background pattern here */
+    background-color: #313131;
+    background-image: radial-gradient(rgba(255, 255, 255, 0.171) 2px, transparent 0);
+    background-size: 30px 30px;
+    background-position: -5px -5px
 }
 
 /* Fonts */
@@ -40,10 +62,6 @@
 /* Popularity Card */
 /* From Uiverse.io by MuhammadHasann */
 .card {
-    --color-pri: #00246B;
-    --color-sec: #CADCFC;
-    --color-sw: #F8F9FA;
-
     position: relative;
     display: flex;
     flex-direction: column;
@@ -53,7 +71,7 @@
     width: 100%;
     background: var(--color-sw);
     border-radius: 1rem 2rem 1rem 2rem;
-    box-shadow: 0 5px 13px -4px var(--color-pri);
+    box-shadow: 0 5px 13px -4px var(--color-sha);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -77,7 +95,7 @@
     width: 70%;
     font-size: 0.875rem;
     line-height: 1.4;
-    color: var(--color-pri);
+    color: var(--color-txt);
     opacity: 0.8;
 }
 
@@ -120,7 +138,7 @@
 
 .card .card__list .card__list_item .list_text {
     font-size: 0.875rem;
-    color: var(--color-pri);
+    color: var(--color-txt);
 }
 
 .card .button {
